--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -105,9 +105,10 @@
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/TMP_TextInfoDebugTool.cs" />
     <Compile Include="Assets/Script/GameManager.cs" />
     <Compile Include="Assets/Script/DoorTeleporter.cs" />
+    <Compile Include="Assets/$Escape Room/OpenDoorES.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/Benchmark01.cs" />
     <Compile Include="Assets/TextMesh Pro/Examples &amp; Extras/Scripts/TMP_TextEventCheck.cs" />
-    <Compile Include="Assets/$Escape Room/OpenDoorES.cs" />
+    <Compile Include="Assets/Script/Note.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets/TextMesh Pro/Shaders/TMPro.cginc" />
